# LLVM_Practice

./: CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt  README.md
app/cpp/: CMakeLists.txt  app.cpp
app/engine/: CMakeLists.txt
app/engine/include/: engine.hpp  engine_llvm.hpp
app/engine/src/: engine.cpp
app/instrumented/: CMakeLists.txt
app/original/: CMakeLists.txt
app/src/: app.cpp  app.txt
examples/: CMakeLists.txt
examples/game_of_life/: CMakeLists.txt  README.md
examples/game_of_life/cpp/: CMakeLists.txt  main.cpp
examples/game_of_life/wrap/: CMakeLists.txt
examples/game_of_life/wrap/include/: wrap.hpp
examples/game_of_life/wrap/src/: wrap.cpp
examples/mandel/: README.md
examples/mandel/cpp/: main.cpp
examples/mandel/wrap/include/: wrap.hpp
examples/mandel/wrap/src/: wrap.cpp
ir_gen/: CMakeLists.txt
ir_gen/src/: main.cpp
lang/: CMakeLists.txt  grammar.txt  lexer.ll  parser.yy
lang/include/: ast.hpp  dot_dump.hpp  driver.hpp
lang/include/lang/: ast.hpp  common.hpp  dot_dump.hpp  driver.hpp  ir_gen.hpp
lang/src/: langc.cpp  toyc.cpp
stat_trace/: stat_trace.py
trace/: CMakeLists.txt
trace/src/: trace.cpp  tracers.cpp
